# tree-sitter-goal

./: .gitignore  AGENT.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  goal.bnf  grammar.js  help.txt  package-lock.json  package.json  pyproject.toml  release.sh  report.md  setup.py  test.goal  tree-sitter.json
.github/workflows/: ci.yml  release.yml  test.yml
.zed/: keymap.json  tasks.json
bindings/c/: tree-sitter-goal.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/rust/: build.rs  lib.rs
doc/: syntax.txt
queries/: highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
test/: _.goal  apply.goal  array.goal  assign.goal  block_comment.goal  comment.goal  composition.goal  conditional.goal  csv.goal  empty.goal  exponential_notation.goal  expression.goal  field.goal  function.goal  function_with_args.goal  import.goal  in.goal  index.goal  infinity.goal  inline_comment.goal  multiple_functions.goal  number.goal  number_literals.goal  parsev.goal  projection.goal  quasiquote.goal  return.goal  rt.goal  scan.goal  seperated.goal  string.goal  string_interpotation.goal  temp.goal  time_literal.goal
test/bugs/: assign_index.goal  assign_list.goal  assign_op.goal  assign_op_index.goal  fold.goal  identity.goal  pi.goal
test/corpus/: atom.txt  dyadic.txt  lambda.txt  strand.txt
todo/: adverb.goal  compositions.goal  fizzbuzz.goal  index.goal  list_assign.goal  op_assign.goal  qq_string.goal  raw_string.goal  sequence.goal  time_literal.goal
(+3 files in other folders)
