[package]
name = "tree-sitter-goal"
description = "Goal grammar for tree-sitter"
authors = ["Werner Laurensse"]
version = "0.0.11"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "goal"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/wrnrlr/tree-sitter-goal"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*"
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
